#42 добавил ручку синхронизации одного чата
